# neon-engine

./: .commit_version  .gitignore  CMakeLists.txt  README.md  generate_history.py
assets/shaders/: default.frag  default.vert
assets/textures/: placeholder.txt
docs/: api-reference.md  architecture.md  build-instructions.md  component-reference.md  ecs-guide.md  getting-started.md
engine/: CMakeLists.txt
engine/audio/: AudioEngine.cpp  AudioEngine.h  MusicPlayer.cpp  MusicPlayer.h  SoundManager.cpp  SoundManager.h
engine/components/: AnimationComponent.cpp  AnimationComponent.h  AudioComponent.cpp  AudioComponent.h  CameraComponent.cpp  CameraComponent.h  CollisionComponent.cpp  CollisionComponent.h  LightComponent.cpp  LightComponent.h  ParticleEmitterComponent.cpp  ParticleEmitterComponent.h  PathfindingComponent.cpp  PathfindingComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  ScriptComponent.cpp  ScriptComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TextComponent.h  TilemapComponent.cpp  TilemapComponent.h  TransformComponent.cpp  TransformComponent.h  UIComponent.cpp  UIComponent.h
engine/core/: Application.cpp  Application.h  EngineConfig.cpp  EngineConfig.h  GameLoop.cpp  GameLoop.h  GameState.cpp  GameState.h  Layer.cpp  Layer.h  ServiceLocator.cpp  ServiceLocator.h  Time.cpp  Time.h
engine/debug/: Console.cpp  Console.h  DebugDraw.cpp  DebugDraw.h  Logger.h  Profiler.cpp  Profiler.h
engine/ecs/: Archetype.cpp  Archetype.h  Chunk.cpp  Chunk.h  Component.cpp  Component.h  ComponentMask.cpp  ComponentMask.h  ComponentRegistry.cpp  ComponentRegistry.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  System.cpp  System.h  World.cpp  World.h
engine/graphics/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  FontManager.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  SpriteBatch.cpp  SpriteBatch.h  TextureManager.cpp  TextureManager.h  View.cpp  View.h  Window.cpp  Window.h
engine/input/: InputAction.cpp  InputAction.h  InputBinding.cpp  InputBinding.h  InputManager.cpp  InputManager.h
engine/math/: MathUtils.cpp  MathUtils.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Random.cpp  Random.h  Rect.cpp  Rect.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
engine/particles/: Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem.cpp  ParticleSystem.h
engine/physics/: BroadPhase.cpp  BroadPhase.h  CollisionDetection.cpp  CollisionDetection.h  ContactResolver.cpp  ContactResolver.h  PhysicsWorld.cpp  PhysicsWorld.h
engine/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
engine/serialization/: BinarySerializer.cpp  BinarySerializer.h  Deserializer.cpp  Deserializer.h  JsonSerializer.cpp  JsonSerializer.h  Serializer.cpp  Serializer.h
engine/systems/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h  ParticleSystem.cpp  ParticleSystem.h  PathfindingSystem.cpp  PathfindingSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  TransformSystem.cpp  TransformSystem.h  UISystem.cpp  UISystem.h
engine/tilemap/: TileLayer.cpp  TileLayer.h  TileSet.cpp  TileSet.h  Tilemap.cpp  Tilemap.h
engine/ui/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  CheckBox.cpp  CheckBox.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  Panel.cpp  Panel.h  Slider.cpp  Slider.h  Style.cpp  Style.h  TextBox.cpp  TextBox.h  Widget.cpp  Widget.h
engine/utils/: FileUtils.cpp  FileUtils.h  PoolAllocator.cpp  PoolAllocator.h  ResourceHandle.cpp  ResourceHandle.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h
examples/platformer/: LevelLoader.cpp  LevelLoader.h  PlayerController.cpp  PlayerController.h  main.cpp
examples/pong/: BallController.cpp  BallController.h  PaddleController.cpp  PaddleController.h  main.cpp
examples/rpg/: GameUI.cpp  GameUI.h  InventorySystem.cpp  InventorySystem.h  main.cpp
tests/: main.cpp
tests/ecs/: EntityTests.cpp  SystemTests.cpp  WorldTests.cpp
tests/math/: MathUtilsTests.cpp  MatrixTests.cpp  Vector2Tests.cpp  Vector3Tests.cpp
tests/physics/: CollisionTests.cpp  PhysicsTests.cpp
tests/serialization/: JsonTests.cpp  SerializationTests.cpp
