set(ENGINE_SOURCES
    core/Application.cpp
    core/GameLoop.cpp
    core/EngineConfig.cpp
    core/Time.cpp
    core/Layer.cpp
    core/GameState.cpp
    core/ServiceLocator.cpp
    ecs/Entity.cpp
    ecs/Component.cpp
    ecs/ComponentRegistry.cpp
    ecs/System.cpp
    ecs/World.cpp
    ecs/EntityManager.cpp
    ecs/Archetype.cpp
    ecs/Chunk.cpp
    ecs/ComponentMask.cpp
    graphics/Renderer.cpp
    graphics/SpriteBatch.cpp
    graphics/TextureManager.cpp
    graphics/ShaderManager.cpp
    graphics/Camera.cpp
    graphics/Window.cpp
    graphics/RenderTarget.cpp
    graphics/View.cpp
    graphics/Animation.cpp
    graphics/FontManager.cpp
    audio/AudioEngine.cpp
    audio/SoundManager.cpp
    audio/MusicPlayer.cpp
    input/InputManager.cpp
    input/InputAction.cpp
    input/InputBinding.cpp
    math/Vector2.cpp
    math/Vector3.cpp
    math/Matrix3.cpp
    math/Matrix4.cpp
    math/Rect.cpp
    math/MathUtils.cpp
    math/Random.cpp
    physics/PhysicsWorld.cpp
    physics/CollisionDetection.cpp
    physics/BroadPhase.cpp
    physics/ContactResolver.cpp
    particles/ParticleSystem.cpp
    particles/ParticleEmitter.cpp
    particles/Particle.cpp
    tilemap/Tilemap.cpp
    tilemap/TileLayer.cpp
    tilemap/TileSet.cpp
    ui/Canvas.cpp
    ui/Widget.cpp
    ui/Button.cpp
    ui/Label.cpp
    ui/Panel.cpp
    ui/TextBox.cpp
    ui/Slider.cpp
    ui/CheckBox.cpp
    ui/ListBox.cpp
    ui/Style.cpp
    serialization/Serializer.cpp
    serialization/Deserializer.cpp
    serialization/JsonSerializer.cpp
    serialization/BinarySerializer.cpp
    debug/DebugDraw.cpp
    debug/Profiler.cpp
    debug/Logger.cpp
    debug/Console.cpp
    debug/StatsOverlay.cpp
    debug/AssetInspector.cpp
    scene/Scene.cpp
    scene/SceneManager.cpp
    utils/FileUtils.cpp
    utils/StringUtils.cpp
    utils/Timer.cpp
    utils/PoolAllocator.cpp
    utils/ResourceHandle.cpp
)

set(ENGINE_HEADERS
    core/Application.h
    core/GameLoop.h
    core/EngineConfig.h
    core/Time.h
    core/Layer.h
    core/GameState.h
    core/ServiceLocator.h
    ecs/Entity.h
    ecs/Component.h
    ecs/ComponentRegistry.h
    ecs/System.h
    ecs/World.h
    ecs/EntityManager.h
    ecs/Archetype.h
    ecs/Chunk.h
    ecs/ComponentMask.h
    graphics/Renderer.h
    graphics/SpriteBatch.h
    graphics/TextureManager.h
    graphics/ShaderManager.h
    graphics/Camera.h
    graphics/Window.h
    graphics/RenderTarget.h
    graphics/View.h
    graphics/Animation.h
    graphics/FontManager.h
    audio/AudioEngine.h
    audio/SoundManager.h
    audio/MusicPlayer.h
    input/InputManager.h
    input/InputAction.h
    input/InputBinding.h
    math/Vector2.h
    math/Vector3.h
    math/Matrix3.h
    math/Matrix4.h
    math/Rect.h
    math/MathUtils.h
    math/Random.h
    physics/PhysicsWorld.h
    physics/CollisionDetection.h
    physics/BroadPhase.h
    physics/ContactResolver.h
    particles/ParticleSystem.h
    particles/ParticleEmitter.h
    particles/Particle.h
    tilemap/Tilemap.h
    tilemap/TileLayer.h
    tilemap/TileSet.h
    ui/Canvas.h
    ui/Widget.h
    ui/Button.h
    ui/Label.h
    ui/Panel.h
    ui/TextBox.h
    ui/Slider.h
    ui/CheckBox.h
    ui/ListBox.h
    ui/Style.h
    serialization/Serializer.h
    serialization/Deserializer.h
    serialization/JsonSerializer.h
    serialization/BinarySerializer.h
    debug/DebugDraw.h
    debug/Profiler.h
    debug/Logger.h
    debug/Console.h
    debug/StatsOverlay.h
    debug/AssetInspector.h
    scene/Scene.h
    scene/SceneManager.h
    utils/FileUtils.h
    utils/StringUtils.h
    utils/Timer.h
    utils/PoolAllocator.h
    utils/ResourceHandle.h
)

add_library(neon-engine STATIC ${ENGINE_SOURCES} ${ENGINE_HEADERS})
target_include_directories(neon-engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(neon-engine PUBLIC sfml-system sfml-window sfml-graphics sfml-audio)

target_compile_features(neon-engine PUBLIC cxx_std_20)
# ECS module sources
# Audio + Input module sources
# Utils module sources
# Added parallel system support
